Fix bold font-weight not showing up

--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,7 @@ img {
 
 .header-pitch h1 {
   font-size: 48px;
+  font-family: "Proxima Nova Bold", Helvetica, Arial, sans-serif;
   font-weight: 600;
   text-align: center;
   color: #fff;
@@ -118,6 +119,7 @@ a.header-button:hover {
   color: #4CB162;
   font-size: 24px;
   text-align: center;
+  font-family: "Proxima Nova Bold", Helvetica, Arial, sans-serif;
   font-weight: 600;
   line-height: 32px;
   margin-top: 2em;
